Elements to vercel deploy

--- a/.vercel/output/static/libros/aprendiendo-git/index.html
+++ b/.vercel/output/static/libros/aprendiendo-git/index.html
@@ -72,10 +72,10 @@
 	animation-fill-mode: both;
 	animation-name: astroFadeIn; }</style></head> <body> <div>  <div class="flex gap-12"> <aside class="flex flex-col items-center gap-4"> <a class="pb-2 hover:underline opacity-70"> &lt;-  Regresar</a> <img src="undefined/portadaLibro.webp" alt="Aprendiendo Git y Github" class="rounded w-72 h-auto" data-astro-transition-scope="astro-64a5gvzg-1"> <!--[if astro]>server-island-start<![endif]--><span class="text-xs opacity-70" id="score">
 Cargando Puntuacion ...
-</span><link rel="preload" as="fetch" href="/_server-islands/BookScore?e=default&p=FCFF80FD541A95A0EF06AF3Cec13AmWe5WVcVYQ743lBGqCr%2Brv0ff5p3CTWkcJcMy%2F3boZ6ppLdLg%3D%3D&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="b1b1bfee-fe31-4edd-81ef-0dea74ceccdd">
-let script = document.querySelector('script[data-island-id="b1b1bfee-fe31-4edd-81ef-0dea74ceccdd"]');
+</span><link rel="preload" as="fetch" href="/_server-islands/BookScore?e=default&p=800EFF73DBB2E9583E808FD0sT5uGPfAtKg8Mbsn8f%2B2gmBiM2qai%2BwObew4OvGfW4einJNU8EBEHQ%3D%3D&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="0120a9e5-b098-4d30-bed2-9397f77b4b3f">
+let script = document.querySelector('script[data-island-id="0120a9e5-b098-4d30-bed2-9397f77b4b3f"]');
 
-let response = await fetch('/_server-islands/BookScore?e=default&p=FCFF80FD541A95A0EF06AF3Cec13AmWe5WVcVYQ743lBGqCr%2Brv0ff5p3CTWkcJcMy%2F3boZ6ppLdLg%3D%3D&s=%7B%7D');
+let response = await fetch('/_server-islands/BookScore?e=default&p=800EFF73DBB2E9583E808FD0sT5uGPfAtKg8Mbsn8f%2B2gmBiM2qai%2BwObew4OvGfW4einJNU8EBEHQ%3D%3D&s=%7B%7D');
 
 
 if(response.status === 200 && response.headers.get('content-type') === 'text/html') {
@@ -93,10 +93,10 @@ if(response.status === 200 && response.headers.get('content-type') === 'text/htm
 	script.before(frag);
 }
 script.remove();
-</script> <!--[if astro]>server-island-start<![endif]--><link rel="preload" as="fetch" href="/_server-islands/BuyButton?e=default&p=DE771F4CDF885E3A0440CF1EI9x8Wi4tgY0MywtTUm8umRGKiDx75yGuJR%2B9IIQ1vziuKwsXbzUzBT3ap2iGdp3ug9E0iA3rjd4bIrGl4xRb6w%2B01rKybn1vy1oeXxgA0k6w9yYqWjDNoY%2Ffsq81hoCVJkh2wxAIC2%2BkvraJdKQRJGHGokjHv4dOeKx%2FeT8NX6UQlWgSDvYKuNKvwuVTlSR8UQleTVHgEmfo86vSpCiFWNar1llqXF3kMx6PjWF2KpuboLc9BqG8Oqc97kJQYXDgNkFtwMG0NFdjFAeNPUb4jCddCqTVILQ52BBqkvz0Qiuz9NvLmU3novA8d4Zrk1NLWVNTyGdxFmzX%2BQ%3D%3D&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="581cc318-2f36-41ba-9d2b-68a265eff58d">
-let script = document.querySelector('script[data-island-id="581cc318-2f36-41ba-9d2b-68a265eff58d"]');
+</script> <!--[if astro]>server-island-start<![endif]--><link rel="preload" as="fetch" href="/_server-islands/BuyButton?e=default&p=749AC246F011559A58062763SzbepY4fGGwNs6OjvyikHgKErq%2FqtiPArqpSQcNHdi8O6r%2F2z9ySv%2F3%2Fq%2B0yqV80%2FYsqw3BJevXQLxcnqo7qVkCYqPiaJZcHyy1mkxzZHLuCjJA%2FeJMhohe2VACNrGK9TpyQBl4iTSli%2FjKyeRTzVpwpcO6r2JQXZOPZde32jSIgc29Z5EvIg4YKIIrHk89EEljPtOHZCLz75s6AdKhZkW2Rh61TJRwKqycKntIJ4qbh2%2FWmn63yuEDh6Fg7GduhU5if0cklKBHIzw7K6dmnMhMtOOELx%2FZ3PazHQg0mpQQeGrbYb%2FngO9nG3cG1NYL95EMG4REikilIqg%3D%3D&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="5f53e27d-1326-4e06-95eb-30c4961a0647">
+let script = document.querySelector('script[data-island-id="5f53e27d-1326-4e06-95eb-30c4961a0647"]');
 
-let response = await fetch('/_server-islands/BuyButton?e=default&p=DE771F4CDF885E3A0440CF1EI9x8Wi4tgY0MywtTUm8umRGKiDx75yGuJR%2B9IIQ1vziuKwsXbzUzBT3ap2iGdp3ug9E0iA3rjd4bIrGl4xRb6w%2B01rKybn1vy1oeXxgA0k6w9yYqWjDNoY%2Ffsq81hoCVJkh2wxAIC2%2BkvraJdKQRJGHGokjHv4dOeKx%2FeT8NX6UQlWgSDvYKuNKvwuVTlSR8UQleTVHgEmfo86vSpCiFWNar1llqXF3kMx6PjWF2KpuboLc9BqG8Oqc97kJQYXDgNkFtwMG0NFdjFAeNPUb4jCddCqTVILQ52BBqkvz0Qiuz9NvLmU3novA8d4Zrk1NLWVNTyGdxFmzX%2BQ%3D%3D&s=%7B%7D');
+let response = await fetch('/_server-islands/BuyButton?e=default&p=749AC246F011559A58062763SzbepY4fGGwNs6OjvyikHgKErq%2FqtiPArqpSQcNHdi8O6r%2F2z9ySv%2F3%2Fq%2B0yqV80%2FYsqw3BJevXQLxcnqo7qVkCYqPiaJZcHyy1mkxzZHLuCjJA%2FeJMhohe2VACNrGK9TpyQBl4iTSli%2FjKyeRTzVpwpcO6r2JQXZOPZde32jSIgc29Z5EvIg4YKIIrHk89EEljPtOHZCLz75s6AdKhZkW2Rh61TJRwKqycKntIJ4qbh2%2FWmn63yuEDh6Fg7GduhU5if0cklKBHIzw7K6dmnMhMtOOELx%2FZ3PazHQg0mpQQeGrbYb%2FngO9nG3cG1NYL95EMG4REikilIqg%3D%3D&s=%7B%7D');
 
 
 if(response.status === 200 && response.headers.get('content-type') === 'text/html') {
