--- a/.vercel/output/static/libros/aprendiendo-otra-cosa/index.html
+++ b/.vercel/output/static/libros/aprendiendo-otra-cosa/index.html
@@ -72,10 +72,10 @@
 	animation-fill-mode: both;
 	animation-name: astroFadeIn; }</style></head> <body> <div>  <div class="flex gap-12"> <aside class="flex flex-col items-center gap-4"> <a class="pb-2 hover:underline opacity-70"> &lt;-  Regresar</a> <img src="undefined/portadaLibro.webp" alt="Aprendiendo otra cosa" class="rounded w-72 h-auto" data-astro-transition-scope="astro-64a5gvzg-1"> <!--[if astro]>server-island-start<![endif]--><span class="text-xs opacity-70" id="score">
 Cargando Puntuacion ...
-</span><link rel="preload" as="fetch" href="/_server-islands/BookScore?e=default&p=F3724339980C5EB0D0441D1ERtFAVyMc0IUknBtAEIMey6RfPXNPF2gceHjdSiVTz0n29m5qeMUa5Ngvcm40gg%3D%3D&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="9ee50059-3bf7-4496-968d-fabb322ead3b">
-let script = document.querySelector('script[data-island-id="9ee50059-3bf7-4496-968d-fabb322ead3b"]');
+</span><link rel="preload" as="fetch" href="/_server-islands/BookScore?e=default&p=E90884205A71C509BA77F2FCJ4Zwj0Bski2u3q3Etg5Vhj8h9Q4EbpucnomrDC81mXDEIWnlmWAyzs33GdpAyA%3D%3D&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="55bb9935-1d36-4d64-b9fd-dc4274bcd9df">
+let script = document.querySelector('script[data-island-id="55bb9935-1d36-4d64-b9fd-dc4274bcd9df"]');
 
-let response = await fetch('/_server-islands/BookScore?e=default&p=F3724339980C5EB0D0441D1ERtFAVyMc0IUknBtAEIMey6RfPXNPF2gceHjdSiVTz0n29m5qeMUa5Ngvcm40gg%3D%3D&s=%7B%7D');
+let response = await fetch('/_server-islands/BookScore?e=default&p=E90884205A71C509BA77F2FCJ4Zwj0Bski2u3q3Etg5Vhj8h9Q4EbpucnomrDC81mXDEIWnlmWAyzs33GdpAyA%3D%3D&s=%7B%7D');
 
 
 if(response.status === 200 && response.headers.get('content-type') === 'text/html') {
@@ -93,10 +93,10 @@ if(response.status === 200 && response.headers.get('content-type') === 'text/htm
 	script.before(frag);
 }
 script.remove();
-</script> <!--[if astro]>server-island-start<![endif]--><link rel="preload" as="fetch" href="/_server-islands/BuyButton?e=default&p=E6462669CC4A1C6DCE1254725iQvIULoFFGY2u5OiMUaUFEhlfQWXQCJ1bqNPGSxxZ%2FsrlWBtQUTDavJ45shGXEYI6TnDESGLpgM1yNOXOMcz9ygokuDpXV1Snnz2MqpD470lCpMHbjIK8KejXXy1xpeldO%2FTKC1vvPMrrYqlNX%2BoGr3z8kLBif531rlT6yvfuU8jWVchKi81TL75gRoYyO8yKFszIHUlKqzEEPIkTOfV3QAIDpJM559PgYKmV2j5pkV1Polw%2BvOx5RmYgEXfV3fLRSBrlE%2Fau6Kb2nVgzA8tqXOR9yzChmAMziBFUz1RfSentXbqh%2Bia5WqHcboLM%2BP%2BST%2B9CJ4VftZ%2Bg%3D%3D&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="76badf95-16f0-42f6-be09-305bcb1b3cf2">
-let script = document.querySelector('script[data-island-id="76badf95-16f0-42f6-be09-305bcb1b3cf2"]');
+</script> <!--[if astro]>server-island-start<![endif]--><link rel="preload" as="fetch" href="/_server-islands/BuyButton?e=default&p=367B32ABD49CDAE88E8FC165QIh1y%2Bar%2FrhbdiE1W%2Bg7fZu08lM0D%2FmhvoBizjNOOVIGQWBbgT%2B5nY42xWciNLmCYiXT1pvZXyj8Bj1n5ibg6IvYWTye0xfmp9cuTgn2qKTbI1DYuF8Bcvh8kCF%2Bx5fo3L8KxUcuS1SJB7spf6t8R%2FruqIRIcZ%2BIxutFa2eJ7ekSREj51kYWHnX%2FohMaJi2%2FbdG%2BXI5JzzNNa2nR%2FONGEWeshDI5nzHAN%2Fc70BHZVmazP6nTzgr41d4M2Ld8yPzl5Jztq14pkJf50reFekW6yfBwv7uX5ftBLbOg1GdX3lgbg%2BDFLjJnYGCQWYlsHv6vVGoUdFdXP3QxLQ%3D%3D&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="2e7bdf73-65aa-408c-be74-1d3ed48f95e1">
+let script = document.querySelector('script[data-island-id="2e7bdf73-65aa-408c-be74-1d3ed48f95e1"]');
 
-let response = await fetch('/_server-islands/BuyButton?e=default&p=E6462669CC4A1C6DCE1254725iQvIULoFFGY2u5OiMUaUFEhlfQWXQCJ1bqNPGSxxZ%2FsrlWBtQUTDavJ45shGXEYI6TnDESGLpgM1yNOXOMcz9ygokuDpXV1Snnz2MqpD470lCpMHbjIK8KejXXy1xpeldO%2FTKC1vvPMrrYqlNX%2BoGr3z8kLBif531rlT6yvfuU8jWVchKi81TL75gRoYyO8yKFszIHUlKqzEEPIkTOfV3QAIDpJM559PgYKmV2j5pkV1Polw%2BvOx5RmYgEXfV3fLRSBrlE%2Fau6Kb2nVgzA8tqXOR9yzChmAMziBFUz1RfSentXbqh%2Bia5WqHcboLM%2BP%2BST%2B9CJ4VftZ%2Bg%3D%3D&s=%7B%7D');
+let response = await fetch('/_server-islands/BuyButton?e=default&p=367B32ABD49CDAE88E8FC165QIh1y%2Bar%2FrhbdiE1W%2Bg7fZu08lM0D%2FmhvoBizjNOOVIGQWBbgT%2B5nY42xWciNLmCYiXT1pvZXyj8Bj1n5ibg6IvYWTye0xfmp9cuTgn2qKTbI1DYuF8Bcvh8kCF%2Bx5fo3L8KxUcuS1SJB7spf6t8R%2FruqIRIcZ%2BIxutFa2eJ7ekSREj51kYWHnX%2FohMaJi2%2FbdG%2BXI5JzzNNa2nR%2FONGEWeshDI5nzHAN%2Fc70BHZVmazP6nTzgr41d4M2Ld8yPzl5Jztq14pkJf50reFekW6yfBwv7uX5ftBLbOg1GdX3lgbg%2BDFLjJnYGCQWYlsHv6vVGoUdFdXP3QxLQ%3D%3D&s=%7B%7D');
 
 
 if(response.status === 200 && response.headers.get('content-type') === 'text/html') {
