--- a/.vercel/output/static/libros/javascript-course/index.html
+++ b/.vercel/output/static/libros/javascript-course/index.html
@@ -72,10 +72,10 @@
 	animation-fill-mode: both;
 	animation-name: astroFadeIn; }</style></head> <body> <div>  <div class="flex gap-12"> <aside class="flex flex-col items-center gap-4"> <a class="pb-2 hover:underline opacity-70"> &lt;-  Regresar</a> <img src="undefined/javascript-course.webp" alt="Javascript Crash Course, 2ed" class="rounded w-72 h-auto" data-astro-transition-scope="astro-64a5gvzg-1"> <!--[if astro]>server-island-start<![endif]--><span class="text-xs opacity-70" id="score">
 Cargando Puntuacion ...
-</span><link rel="preload" as="fetch" href="/_server-islands/BookScore?e=default&p=05D1DBC61414F42C4AFF7372pOHGeHlIquywlEsjxZWI27Z6Uze3F33XOy3pSHtrZqpEOdJWiViL0jFa&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="82835608-37c9-40e7-8846-f44312aa7daa">
-let script = document.querySelector('script[data-island-id="82835608-37c9-40e7-8846-f44312aa7daa"]');
+</span><link rel="preload" as="fetch" href="/_server-islands/BookScore?e=default&p=965F435B9D3BBF7B759BD4596Zxmo0dE3QW%2B7mHPBVa1Q%2Bh4SE6nwol9qAyDWBVNYi9a0ka%2Blp37vPoc&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="bb3a8195-6b5f-44cc-959d-c44e4deed032">
+let script = document.querySelector('script[data-island-id="bb3a8195-6b5f-44cc-959d-c44e4deed032"]');
 
-let response = await fetch('/_server-islands/BookScore?e=default&p=05D1DBC61414F42C4AFF7372pOHGeHlIquywlEsjxZWI27Z6Uze3F33XOy3pSHtrZqpEOdJWiViL0jFa&s=%7B%7D');
+let response = await fetch('/_server-islands/BookScore?e=default&p=965F435B9D3BBF7B759BD4596Zxmo0dE3QW%2B7mHPBVa1Q%2Bh4SE6nwol9qAyDWBVNYi9a0ka%2Blp37vPoc&s=%7B%7D');
 
 
 if(response.status === 200 && response.headers.get('content-type') === 'text/html') {
@@ -93,10 +93,10 @@ if(response.status === 200 && response.headers.get('content-type') === 'text/htm
 	script.before(frag);
 }
 script.remove();
-</script> <!--[if astro]>server-island-start<![endif]--><link rel="preload" as="fetch" href="/_server-islands/BuyButton?e=default&p=5446C9DAB98BFEC612F2BFA4UpN8wIM3ASW1SW5xKHJKus1usKK6EDa2%2B6sbqzr02PKOT5LJVND4iGfAdmm5IIuxY9yRb81wFEcFHLnHf%2BVnp0uzBuiP36s0M9MFSLHCWa3RoOdyJW%2BOgSxTOBr1qRkKPZ%2B69Qn0L7X175LuYfhDqWcu9ZhzTxgy4bKW5sbmLHrorMKjr3tW6X8%2B7qMaiTy03ku5NXaw7z%2BXyX2oR2c%2BIRF6FVKitW15Cz6%2BDoFM6LAUgN%2FJhKMA3z5VTwFioGAC%2BxU8hYpou2og5oMNoHguhE6di5ci5WfAh3Fg4EErB0IUNxGK5ZjMS7EEtW4OF476H%2B0L3ApaxluEKxrqfzDPqPVwsQWK1eIB55zYI71m521B7I0l6IPNDmkhWY%2FOWv96GFQfJp8nZjLpCDMQiCIsbwOVDzQ62fs6kFIjWcWFkLGgVh%2FxvcSXK0GYTM8ynDdFGsW42V5ZPXfuKwM%2FUr6dNJz2VeOM5%2FssjOkTpKCR0f3rb%2Bpcizmx61mX93XTLiMbHwI8vc4iFyqjl3SSUfMgZ56OaZ5BLTI4cX3TaRJzfEVPjN4pmanpUHUQU2OvluDkYZFK5S86EkRT%2FkaHo%2BGA28aiKZX3HGMBhg%3D%3D&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="82e97199-56c1-410c-8073-834a2bcd0bff">
-let script = document.querySelector('script[data-island-id="82e97199-56c1-410c-8073-834a2bcd0bff"]');
+</script> <!--[if astro]>server-island-start<![endif]--><link rel="preload" as="fetch" href="/_server-islands/BuyButton?e=default&p=337C2218FC1EFFEC6EDF58E6ARleakI03fai8%2BdpQXGtOaEl4Lk%2FGPPNFbqBqXpFxcYxYeR1l%2Fp7VhA7%2Byy%2BeFiISzM%2Ba7y4Q30eonIU0R7YnwIFgy79plZ%2FbD1mtyXLoRn1wxZLVX1107KdIjJy9kbOQAWwwm6GeQPvZbYfuBibWeCeO8wA7xGSXgnqFm4PhTnNUe2mMY8AxqJo3MfgXY%2BcWJawpzLZyC%2BKPpFp1LLUZYWtbifF1Kz%2B8sX83UJcDxSsUX23ABBT%2BpPrCRiQFU1IJ45%2B5ghBWGMt2E7%2Fz8wMUFeKErCZWhbeHoVzMPONJxXPYPOfnPvKZcrERumzIM1ORJcKh409GDtv8B7pWEUI8Gjmi9jsYNlFzdVtZtWAekq5MTQH49AUH2Bz0W22b%2F395D%2FTlHcnx7QLhtpKggYjcw%2Fl04hWvXGmF4UVxhVfrnGwoEjo6tWrPBRBlbbPsQUdsRnN8HYSWJ%2F0ga3XsnZrtRLMOLtUT%2BIPtRDhjJViCgMKW%2FF5CxKyFLF979R6w5fs%2FhFuV4f690nEbnkRclDjktdS9Sg3VtMWZe4fweDhRjfyDvx2yMkutKH%2B78NV2A1Z5tXf1khhOIJ%2BYNePn%2BYlEsXprucJZtVXrg%3D%3D&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="80ce46f2-4a52-4521-9314-df44cac07d9a">
+let script = document.querySelector('script[data-island-id="80ce46f2-4a52-4521-9314-df44cac07d9a"]');
 
-let response = await fetch('/_server-islands/BuyButton?e=default&p=5446C9DAB98BFEC612F2BFA4UpN8wIM3ASW1SW5xKHJKus1usKK6EDa2%2B6sbqzr02PKOT5LJVND4iGfAdmm5IIuxY9yRb81wFEcFHLnHf%2BVnp0uzBuiP36s0M9MFSLHCWa3RoOdyJW%2BOgSxTOBr1qRkKPZ%2B69Qn0L7X175LuYfhDqWcu9ZhzTxgy4bKW5sbmLHrorMKjr3tW6X8%2B7qMaiTy03ku5NXaw7z%2BXyX2oR2c%2BIRF6FVKitW15Cz6%2BDoFM6LAUgN%2FJhKMA3z5VTwFioGAC%2BxU8hYpou2og5oMNoHguhE6di5ci5WfAh3Fg4EErB0IUNxGK5ZjMS7EEtW4OF476H%2B0L3ApaxluEKxrqfzDPqPVwsQWK1eIB55zYI71m521B7I0l6IPNDmkhWY%2FOWv96GFQfJp8nZjLpCDMQiCIsbwOVDzQ62fs6kFIjWcWFkLGgVh%2FxvcSXK0GYTM8ynDdFGsW42V5ZPXfuKwM%2FUr6dNJz2VeOM5%2FssjOkTpKCR0f3rb%2Bpcizmx61mX93XTLiMbHwI8vc4iFyqjl3SSUfMgZ56OaZ5BLTI4cX3TaRJzfEVPjN4pmanpUHUQU2OvluDkYZFK5S86EkRT%2FkaHo%2BGA28aiKZX3HGMBhg%3D%3D&s=%7B%7D');
+let response = await fetch('/_server-islands/BuyButton?e=default&p=337C2218FC1EFFEC6EDF58E6ARleakI03fai8%2BdpQXGtOaEl4Lk%2FGPPNFbqBqXpFxcYxYeR1l%2Fp7VhA7%2Byy%2BeFiISzM%2Ba7y4Q30eonIU0R7YnwIFgy79plZ%2FbD1mtyXLoRn1wxZLVX1107KdIjJy9kbOQAWwwm6GeQPvZbYfuBibWeCeO8wA7xGSXgnqFm4PhTnNUe2mMY8AxqJo3MfgXY%2BcWJawpzLZyC%2BKPpFp1LLUZYWtbifF1Kz%2B8sX83UJcDxSsUX23ABBT%2BpPrCRiQFU1IJ45%2B5ghBWGMt2E7%2Fz8wMUFeKErCZWhbeHoVzMPONJxXPYPOfnPvKZcrERumzIM1ORJcKh409GDtv8B7pWEUI8Gjmi9jsYNlFzdVtZtWAekq5MTQH49AUH2Bz0W22b%2F395D%2FTlHcnx7QLhtpKggYjcw%2Fl04hWvXGmF4UVxhVfrnGwoEjo6tWrPBRBlbbPsQUdsRnN8HYSWJ%2F0ga3XsnZrtRLMOLtUT%2BIPtRDhjJViCgMKW%2FF5CxKyFLF979R6w5fs%2FhFuV4f690nEbnkRclDjktdS9Sg3VtMWZe4fweDhRjfyDvx2yMkutKH%2B78NV2A1Z5tXf1khhOIJ%2BYNePn%2BYlEsXprucJZtVXrg%3D%3D&s=%7B%7D');
 
 
 if(response.status === 200 && response.headers.get('content-type') === 'text/html') {
