--- a/.vercel/output/static/libros/python-crash-course/index.html
+++ b/.vercel/output/static/libros/python-crash-course/index.html
@@ -72,10 +72,10 @@
 	animation-fill-mode: both;
 	animation-name: astroFadeIn; }</style></head> <body> <div>  <div class="flex gap-12"> <aside class="flex flex-col items-center gap-4"> <a class="pb-2 hover:underline opacity-70"> &lt;-  Regresar</a> <img src="undefined/python-course.webp" alt="Python Crash Course, 3rd" class="rounded w-72 h-auto" data-astro-transition-scope="astro-64a5gvzg-1"> <!--[if astro]>server-island-start<![endif]--><span class="text-xs opacity-70" id="score">
 Cargando Puntuacion ...
-</span><link rel="preload" as="fetch" href="/_server-islands/BookScore?e=default&p=5FC5E066047CEBEE290B3F6DMYSJ6aF3hSFD9rWCmMcfPscJajD2tp0q0OG8Qv15o7TnOihXwz104XZ9nPg%3D&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="9df6f3d4-e842-4f68-931d-ff7e9ca74de8">
-let script = document.querySelector('script[data-island-id="9df6f3d4-e842-4f68-931d-ff7e9ca74de8"]');
+</span><link rel="preload" as="fetch" href="/_server-islands/BookScore?e=default&p=B4B0DABAB968AA8BDB58765AeXlhQaRfliOVT2zualer1bdtZHqILvDn8DOyTWENZXrCs%2B%2FBtWwyURp0GYE%3D&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="a9e2ae23-139c-4c60-b995-a74a642cb470">
+let script = document.querySelector('script[data-island-id="a9e2ae23-139c-4c60-b995-a74a642cb470"]');
 
-let response = await fetch('/_server-islands/BookScore?e=default&p=5FC5E066047CEBEE290B3F6DMYSJ6aF3hSFD9rWCmMcfPscJajD2tp0q0OG8Qv15o7TnOihXwz104XZ9nPg%3D&s=%7B%7D');
+let response = await fetch('/_server-islands/BookScore?e=default&p=B4B0DABAB968AA8BDB58765AeXlhQaRfliOVT2zualer1bdtZHqILvDn8DOyTWENZXrCs%2B%2FBtWwyURp0GYE%3D&s=%7B%7D');
 
 
 if(response.status === 200 && response.headers.get('content-type') === 'text/html') {
@@ -93,10 +93,10 @@ if(response.status === 200 && response.headers.get('content-type') === 'text/htm
 	script.before(frag);
 }
 script.remove();
-</script> <!--[if astro]>server-island-start<![endif]--><link rel="preload" as="fetch" href="/_server-islands/BuyButton?e=default&p=8EA48E06870B74A57B008B05noYyluVfvBWtasYXhNlhmeqLUwvTny6srCytE2GnXmA%2BXgTkmrTA6Kw3tYbiJBvsUjijy6qcbKUfq%2FMJx1ObZ%2FNuOy2X571%2FLXhDc21nz8eGlv5QUv%2BDmBp5Uc8x0NpcyzvutfXRcAvVyY9vvE2N00TFXSHmFYERI%2FZKd89Oo4iZtClLzdci2WVsa0A0IK7Z0QMfU8HCADC3MY7zeJV5h%2BOsnlXxRQbAPWvENsXClTfdbqqM7cgOggx5zj5ueZLr2FbmjoqUNlfB4Y9wVB76b1rkHwI9Ms8gBn6725%2FDW816ko%2BR7FnpQw7%2Fg78PKqnZEA7%2FygszL8SQsNeZHAbBKZ689pq6F%2FDz0i%2FRtmkwvBbyPTz5ZNLQb0yjB1fd6CRg3Yax9LQ2v3%2FibmpxIj%2B2gDTG1PFhR8ot54glLmX%2BGv%2B3t2lgJkOsxhfYs3bkqJRRAfigDT1JpQCT1I2sOWJGj8xim8OsOWtMqovmL2Ah3jPr3eNxqjZWUnwmJ927A2sJCEKLxGb1qJPDg7pYFWUv6nlH0lgMi%2BhLH6VUGXL8la3sb7bPxT%2FIfiLZcjVwNKGpQQ5Q4pfwV28z9fSaL8WCb3lRfo%2BLbB2Kgw%3D%3D&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="059afefd-6432-42aa-9030-b53905a24626">
-let script = document.querySelector('script[data-island-id="059afefd-6432-42aa-9030-b53905a24626"]');
+</script> <!--[if astro]>server-island-start<![endif]--><link rel="preload" as="fetch" href="/_server-islands/BuyButton?e=default&p=273876F2CC00F6EED04A77A7BFN2RdG65pApwUcwmPJ6nQkDrTW4HuoTS2%2FUU25s2bV2Mr2j6LV%2FMIu%2Fm2nkcVL7fwg7n6vVEilZOYgxvugo4OJvrmFSrIKeeiY8gN78a9%2FLE%2BHeBOOzbT7MoebLa2qGqUqzUYDonlC9hHtv9mSZPMgRxCe8WTsB%2Bfo4WeCMgP6wJFB39doSImdE5h%2FXSMCmi%2Fyzk0AhRJxF9vrJBoNOaVKKLxxqZR1gOctAvPzn9z%2FvdIu8SmtBSXYfg5c5QEO2MwpDw5mGvyLpdyldbJulyxRYMd5st0xglApoRlyl9KCM7WbtDIXnNR3hUAl1l5KJt0pOBpKgiORQ%2BaYr58U%2FNe1ylrNBHOHtnI5In7wntCDlOMMGyB9%2BcS1NTUEdmsXwQ5qoKU3rBKA1NlW24VJH%2B15aELDj1MH09PKuX%2FurhZpf0f7zFeROP2aVHbSlck9PITOrK3me8s271oqB%2BojXVBNEv4i96M68a%2BzOQ9ekKhcy%2FeqS2psExegk%2BX5bOq8M6aoDFpqqANW8gi7px4DzY9NledzUvmIBHWDl94SXNDzb%2BPDrwL8V4XDvhTubwwL5gs7%2BB7CUFhumCSTg%2BseLHNsbZKnrTL7%2BiA%3D%3D&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="58f5b346-a369-4f77-b74e-cd171a1e1915">
+let script = document.querySelector('script[data-island-id="58f5b346-a369-4f77-b74e-cd171a1e1915"]');
 
-let response = await fetch('/_server-islands/BuyButton?e=default&p=8EA48E06870B74A57B008B05noYyluVfvBWtasYXhNlhmeqLUwvTny6srCytE2GnXmA%2BXgTkmrTA6Kw3tYbiJBvsUjijy6qcbKUfq%2FMJx1ObZ%2FNuOy2X571%2FLXhDc21nz8eGlv5QUv%2BDmBp5Uc8x0NpcyzvutfXRcAvVyY9vvE2N00TFXSHmFYERI%2FZKd89Oo4iZtClLzdci2WVsa0A0IK7Z0QMfU8HCADC3MY7zeJV5h%2BOsnlXxRQbAPWvENsXClTfdbqqM7cgOggx5zj5ueZLr2FbmjoqUNlfB4Y9wVB76b1rkHwI9Ms8gBn6725%2FDW816ko%2BR7FnpQw7%2Fg78PKqnZEA7%2FygszL8SQsNeZHAbBKZ689pq6F%2FDz0i%2FRtmkwvBbyPTz5ZNLQb0yjB1fd6CRg3Yax9LQ2v3%2FibmpxIj%2B2gDTG1PFhR8ot54glLmX%2BGv%2B3t2lgJkOsxhfYs3bkqJRRAfigDT1JpQCT1I2sOWJGj8xim8OsOWtMqovmL2Ah3jPr3eNxqjZWUnwmJ927A2sJCEKLxGb1qJPDg7pYFWUv6nlH0lgMi%2BhLH6VUGXL8la3sb7bPxT%2FIfiLZcjVwNKGpQQ5Q4pfwV28z9fSaL8WCb3lRfo%2BLbB2Kgw%3D%3D&s=%7B%7D');
+let response = await fetch('/_server-islands/BuyButton?e=default&p=273876F2CC00F6EED04A77A7BFN2RdG65pApwUcwmPJ6nQkDrTW4HuoTS2%2FUU25s2bV2Mr2j6LV%2FMIu%2Fm2nkcVL7fwg7n6vVEilZOYgxvugo4OJvrmFSrIKeeiY8gN78a9%2FLE%2BHeBOOzbT7MoebLa2qGqUqzUYDonlC9hHtv9mSZPMgRxCe8WTsB%2Bfo4WeCMgP6wJFB39doSImdE5h%2FXSMCmi%2Fyzk0AhRJxF9vrJBoNOaVKKLxxqZR1gOctAvPzn9z%2FvdIu8SmtBSXYfg5c5QEO2MwpDw5mGvyLpdyldbJulyxRYMd5st0xglApoRlyl9KCM7WbtDIXnNR3hUAl1l5KJt0pOBpKgiORQ%2BaYr58U%2FNe1ylrNBHOHtnI5In7wntCDlOMMGyB9%2BcS1NTUEdmsXwQ5qoKU3rBKA1NlW24VJH%2B15aELDj1MH09PKuX%2FurhZpf0f7zFeROP2aVHbSlck9PITOrK3me8s271oqB%2BojXVBNEv4i96M68a%2BzOQ9ekKhcy%2FeqS2psExegk%2BX5bOq8M6aoDFpqqANW8gi7px4DzY9NledzUvmIBHWDl94SXNDzb%2BPDrwL8V4XDvhTubwwL5gs7%2BB7CUFhumCSTg%2BseLHNsbZKnrTL7%2BiA%3D%3D&s=%7B%7D');
 
 
 if(response.status === 200 && response.headers.get('content-type') === 'text/html') {
